# msw-core

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml  release.yml
src/murineshiftwork/cli/: __init__.py  config.py  evaluate.py  execute.py  parser.py  post.py  preflight.py  tasks.py
src/murineshiftwork/hardware/: host_session.py  manager.py  scale.py  stimulation.py
src/murineshiftwork/hardware/bpod/: __init__.py  actions.py  device.py  factory.py  override.py  sim.py  ttl.py  user_settings.py
src/murineshiftwork/hardware/camera/: client.py
src/murineshiftwork/hardware/pulsepal/: device.py
src/murineshiftwork/hooks/: __init__.py  base.py  context.py  runner.py
src/murineshiftwork/logic/: barcode.py  calibration.py  log.py  machine_config.py  misc.py  paths.py  reward_metadata.py  sounds.py  task_process.py
src/murineshiftwork/logic/calibration/: __init__.py  data.py  stats.py  viz.py
src/murineshiftwork/logic/config/: __init__.py  _defaults.py  io.py  models.py
tests/: test_bpod_factory.py  test_camera_peer_registration.py  test_cli_parser.py  test_config_upgrade.py  test_reward_metadata.py  test_serial_resolution.py  test_setup_config_io.py  test_sim_bpod.py  test_smoke.py  test_sounds.py  test_task_process_host.py  test_valve_calibration_fit.py  test_version.py
tests/data/: setup_fixture.yaml
